[project]
name = "f0"
version = "0.1.0"
description = "F0 is a circuit and telemetry tracker for F1 Grandprix. The GUI shows data from the last few years' FP1,FP2,FP3,Qualifying, and Race. It also shows each individual circuit in a new window with the corners and the start/finish line marked. Finally, there are sets of buttons for more info on basic F1 regulations."
authors = ["Abi Nedun <anedunbusiness@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastf1>=3.5.3",
]
